# heap-buddy

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.in  libtool  svn-commit.2.tmp  svn-commit.tmp
analyzer/: Backtrace.cs  BacktracesReport.cs  Frame.cs  Gc.cs  GraphReport.cs  HeapBuddy.cs  HistoryReport.cs  Makefile  Makefile.am  Makefile.in  MemGraph.cs  MemZone.cs  MemlogReport-solo.cs  MemlogReport.cs  MethodLog.cs  ObjectStats.cs  OutfileReader.cs  Report.cs  Resize.cs  SummaryReport.cs  Table.cs  Type.cs  TypeLog.cs  TypesReport.cs  Util.cs  heap-buddy.in  memgraph.glade
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
heap-buddy/: autogen.sh
heap-buddy/analyzer/: Backtrace.cs  Gc.cs  OutfileReader.cs  Table.cs  Util.cs
heap-buddy/doc/: outfile-format
heap-buddy/profiler/: backtrace.h  heap-buddy.c  outfile-writer.c  outfile-writer.h
heap-buddy/test/: test-03.cs
profiler/: Makefile  Makefile.am  Makefile.in  accountant.c  accountant.h  backtrace.c  backtrace.h  heap-buddy.c  outfile-writer.c  outfile-writer.h
profiler/.deps/: accountant.Plo  backtrace.Plo  heap-buddy.Plo  outfile-writer.Plo
test/: Makefile  Makefile.am  Makefile.in  test-01.cs  test-02.cs  test-04.cs  test-05.cs  test-06.cs
